--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "jtbd-journey-map",
+  "name": "rev-cloud-jtbd",
   "version": "0.1.0",
   "private": true,
+  "description": "Interactive Jobs-to-be-Done Journey Mapping Platform",
+  "homepage": "https://rev-cloud-jtbd.vercel.app",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
@@ -11,8 +13,11 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@xyflow/react": "^12.8.2",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -40,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/papaparse": "^5.3.16",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
