--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Interactive Jobs-to-be-Done Journey Mapping Platform",
   "homepage": "https://rev-cloud-jtbd.vercel.app",
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
